fix: align warning progress color

--- a/src/containers/Tenant/Diagnostics/TenantOverview/MetricPageSummary/MetricPageSummary.scss
+++ b/src/containers/Tenant/Diagnostics/TenantOverview/MetricPageSummary/MetricPageSummary.scss
@@ -59,7 +59,7 @@
     }
 
     &__progress_theme_warning {
-        --metric-page-summary-progress-color: var(--g-color-text-warning);
+        --metric-page-summary-progress-color: var(--g-color-line-warning);
     }
 
     &__progress_theme_danger {
